
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blazeserve"
version = "0.1.0"
description = "Fast, dependable HTTP file server for sharing files and folders — supports byte-range/multi-range downloads, TLS, Basic Auth, throttling, uploads, streaming ZIP, CORS, and a polished CLI."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jaydeep Solanki" }]
keywords = ["http", "file-server", "range", "resume", "download", "cli", "rich", "click", "cors", "zip", "throttle"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Topic :: Internet :: WWW/HTTP :: HTTP Servers",
"Topic :: System :: Networking",
]

dependencies = [
"click>=8.1",
"rich>=13.0.0",
"rich-click>=1.8.0",
]

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"mypy>=1.7",
"ruff>=0.5",
"types-click>=7.1.8",
]

[project.scripts]
blaze = "blazeserve.cli:main"

[project.urls]
Homepage = "https://github.com/whoisjayd/blazeserve"
Repository = "https://github.com/whoisjayd/blazeserve.git"
Issues = "https://github.com/whoisjayd/blazeserve/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["blazeserve*"]
